--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "lucide-react": "^0.553.0",
     "mapbox-gl": "^2.15.0",
+    "openai": "^6.8.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-map-gl": "^7.1.9",
