--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mapbox/search-js-react": "^1.5.0",
     "lucide-react": "^0.553.0",
     "mapbox-gl": "^2.15.0",
     "openai": "^6.8.1",
+    "qrcode.react": "^4.2.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
     "react-map-gl": "^7.1.9",
     "react-qr-code": "^2.0.18",
     "react-router-dom": "^7.9.5"
