--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,6 +10,7 @@ Jinja2==3.1.6
 MarkupSafe==3.0.3
 python-dotenv==1.2.1
 qrcode==8.2
+requests==2.32.4
 SQLAlchemy==2.0.44
 typing_extensions==4.15.0
 Werkzeug==3.1.3
