--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@mapbox/search-js-react": "^1.5.0",
+    "html5-qrcode": "^2.3.8",
     "lucide-react": "^0.553.0",
     "mapbox-gl": "^2.15.0",
     "openai": "^6.8.1",
